src/objects/Graph_Parameter__c.object
<CustomObject>
    <description>Definition of a graph. This includes all the parameters that can go into the graph</description>
    <fields>
        <fullName>Dashboard_Section__c</fullName>
        <description>The section of a dashboard that this graph belongs to</description>
        <inlineHelpText>Choose the dashboard section that this graph will be displayed in</inlineHelpText>
        <label>Dashboard Section</label>
        <referenceTo>Dashboard_Section__c</referenceTo>
        <relationshipLabel>Graph Parameters</relationshipLabel>
        <relationshipName>Graph_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Period__c</fullName>
        <description>The gap between dates on the xAxis. Only used if xAxisSeries is Date</description>
        <inlineHelpText>Select the time period between values on the xAxis if the xAxis is of type date</inlineHelpText>
        <label>Date Period</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Show__c</fullName>
        <defaultValue>3</defaultValue>
        <description>The number of points to show on a graphs xAxis by default</description>
        <inlineHelpText>Choose how many points on the xAxis should be shown by default. Defaults to 3</inlineHelpText>
        <label>Default Show</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the parameter is still active and needs calculating and including in a dashboard</description>
        <inlineHelpText>Uncheck if this graph should not be shown on a dashboard</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legend_Color__c</fullName>
        <description>The colour that the legend on the graph will display as</description>
        <inlineHelpText>Select the colour that the legend on the graph will be displayed in</inlineHelpText>
        <label>Legend Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Data_Inline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show a table of the data inline with the graph. Will only show up on when a graph is part of a dashboard as opposed to being shown on its own</description>
        <inlineHelpText>Check to show the data on the graph in a table next to the graph</inlineHelpText>
        <label>Show Data Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Color__c</fullName>
        <description>The colour that the title will be displayed as</description>
        <inlineHelpText>Select the colour that the title will be displayed as</inlineHelpText>
        <label>Title Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title for the graph</description>
        <inlineHelpText>Enter a title that will be displayed on this graph</inlineHelpText>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_Graph__c</fullName>
        <description>The type of graph to be displayed</description>
        <inlineHelpText>Pick the display method that this graph has</inlineHelpText>
        <label>Type Of Graph</label>
        <picklist>
            <picklistValues>
                <fullName>BarChart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ColumnChart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LineChart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PieChart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xAxis_Color__c</fullName>
        <description>The colour that the title of the xAxis will be displayed in</description>
        <inlineHelpText>Select the colour that the title of the xAxis will be displayed in</inlineHelpText>
        <label>xAxis Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xAxis_Series__c</fullName>
        <description>The series that is along the xAxis</description>
        <inlineHelpText>Select what is to be displayed along the xAxis</inlineHelpText>
        <label>xAxis Series</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcounty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Farming Types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Content Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Crop Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Animal Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Human Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Other Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xAxis_Title__c</fullName>
        <description>The title to go on the xAxis of a graph</description>
        <inlineHelpText>Enter the title that is for the xAxis of this graph</inlineHelpText>
        <label>xAxis Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>yAxis_Color__c</fullName>
        <description>The colour that the yAxis title is displayed as</description>
        <inlineHelpText>Select the colour that the yAxis title is displayed as</inlineHelpText>
        <label>yAxis Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>yAxis_Title__c</fullName>
        <description>The title to be displayed on the yAxis of the graph</description>
        <inlineHelpText>Enter the title for the yAxis</inlineHelpText>
        <label>yAxis Title</label>
        <type>TextArea</type>
    </fields>
    <label>Graph Parameter</label>
    <nameField>
        <displayFormat>GP{0000000000}</displayFormat>
        <label>Graph Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graph Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>